--- a/nosotros.html
+++ b/nosotros.html
@@ -161,7 +161,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member d-flex align-items-start">
               <div class="pic">
-                <img src="/img/team/team-1.jpg" class="img-fluid" alt="" />
+                <img src="img/team/team-1.jpg" class="img-fluid" alt="" />
               </div>
               <div class="member-info">
                 <h4>Nombre Apellido</h4>
@@ -183,7 +183,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member d-flex align-items-start">
               <div class="pic">
-                <img src="/img/team/team-1.jpg" class="img-fluid" alt="" />
+                <img src="img/team/team-1.jpg" class="img-fluid" alt="" />
               </div>
               <div class="member-info">
                 <h4>Sebastian</h4>
@@ -206,7 +206,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member d-flex align-items-start">
               <div class="pic">
-                <img src="/img/team/team-1.jpg" class="img-fluid" alt="" />
+                <img src="img/team/team-1.jpg" class="img-fluid" alt="" />
               </div>
               <div class="member-info">
                 <h4>J J</h4>
@@ -228,7 +228,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member d-flex align-items-start">
               <div class="pic">
-                <img src="/img/team/team-3.jpg" class="img-fluid" alt="" />
+                <img src="img/team/team-3.jpg" class="img-fluid" alt="" />
               </div>
               <div class="member-info">
                 <h4>Leonardo Lombana</h4>
