--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Link para el formulario y el footer -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css" rel="stylesheet" />
 
-  <title>Armor Games - tienda </title>
+  <title>Armor Games - tienda Online </title>
 
 </head>
 
