Se agrega la seccion de blog en la pagina main

--- a/consolas.html
+++ b/consolas.html
@@ -74,8 +74,8 @@
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white">
-              <h1 class="mb-3">LA CONSOLA QUE BUSCAS EN UN SOLO LUGAR</h1>
-              <h4 class="mb-3">selecciona la de tu gusto y dale en comprar</h4>
+              <h1 class="mb-3" style="text-align: center; font-size: 47px; font-weight: 600;">LA CONSOLA QUE BUSCAS EN UN SOLO LUGAR</h1>
+              <h4 class="mb-3">Selecciona la de tu gusto y dale en comprar</h4>
               <a
                 data-mdb-ripple-init
                 class="btn btn-outline-light btn-lg"
