--- a/consolas_playStation.html
+++ b/consolas_playStation.html
@@ -74,7 +74,7 @@
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white">
-              <h1 class="mb-3">EXPERIENCIA UNICA CON TU PLAYSTATION</h1>
+              <h1 class="mb-3" style="text-align: center; font-size: 47px; font-weight: 600;">EXPERIENCIA UNICA CON TU PLAYSTATION</h1>
               <h4 class="mb-3">Dale en comprar o contactanos</h4>
               <a
                 data-mdb-ripple-init
