--- a/contacto.html
+++ b/contacto.html
@@ -75,9 +75,9 @@
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white">
-              <h1 class="mb-3">BUSCAS MAS INFORMACION</h1>
-              <h4 class="mb-3">no dudes en ponerte en contacto con nosotros</h4>
-              <a
+              <h1 class="mb-3" style="text-align: center; font-size: 47px; font-weight: 600;">BUSCAS MAS INFORMACION</h1>
+              <h4 class="mb-3">No dudes en ponerte en contacto con nosotros</h4>
+              <a 
                 data-mdb-ripple-init
                 class="btn btn-outline-light btn-lg"
                 href="#!"
