--- a/nosotros.html
+++ b/nosotros.html
@@ -74,7 +74,7 @@
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white">
-              <h1 class="mb-3">NUESTRO EQUIPO DE TRABAJO ESTARA A TU DISPOSICION</h1>
+              <h1 class="mb-3" style="text-align: center; font-size: 47px; font-weight: 600;" >NUESTRO EQUIPO DE TRABAJO ESTA PARA SERVIRTE</h1>
               <!--<h4 class="mb-3">no dudes en ponerte en contacto con nosotros</h4>
               <a
                 data-mdb-ripple-init
@@ -98,14 +98,18 @@
       <p class="parrafos">
         Bienvenidos a Armor Games, su tienda en línea de entretenimiento para
         los gamers. Somos una empresa especializada en la venta de hardware y
-        accesorios de alta calidad de los videojuegos. Con un amplio catálogo de
-        productos de consolas hasta componentes y periféricos de juego. Con un
-        equipo técnico especializados en servicio altamente capacitado , para
-        brindar soporte y solucionar cualquier problema técnico que pueda surgir
-        con sus productos. Para la satisfacción de nuestros clientes, ofrecemos
-        garantías en todos nuestros productos y servicio prestado, asegurando
-        que cada compra sea una experiencia positiva. Brindando Soporte 7/24
-        horas dando pronta solución a nuestros clientes para que tengan una
+        accesorios de alta calidad de los videojuegos. Con un amplio catálogo 
+        de productos de consolas hasta componentes y periféricos de juego.
+        <br>
+        <br>
+        Con un equipo técnico especializados en servicio altamente capacitado, 
+        para brindar soporte y solucionar cualquier problema técnico que pueda surgir
+        con sus productos. Para la satisfacción de nuestros clientes.
+        <br>
+        <br>
+        Ofrecemos garantías en todos nuestros productos y servicio prestado, 
+        asegurando que cada compra sea una experiencia positiva. Brindando Soporte 
+        7/24 horas dando pronta solución a nuestros clientes para que tengan una
         experiencia incomparable. En Armor Games, queremos que nuestros clientes
         tengan la mejor experiencia con nuestros productos y servicios.
       </p>
