--- a/consolas_nintendoSwitch.html
+++ b/consolas_nintendoSwitch.html
@@ -74,7 +74,7 @@
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white">
-              <h1 class="mb-3">SI PREFIERES LLEVAR TU CONSOLA A TODOS LADOS</h1>
+              <h1 class="mb-3" style="text-align: center; font-size: 47px; font-weight: 600;">SI PREFIERES LLEVAR TU CONSOLA A TODOS LADOS</h1>
               <h4 class="mb-3">Dale en comprar o contactanos</h4>
               <a
                 data-mdb-ripple-init
@@ -112,6 +112,7 @@
                 ></div>
               </a>
             </div>
+
             <div class="card-body">
               <h5 class="card-title">NINTENDO SWITCH | OLED</h5>
               <p class="card-text">Desde COP 3'000.000</p>
@@ -124,6 +125,7 @@
             </div>
           </div>
         </div>
+        
         <div class="col-sm-4">
           <div class="card">
             <div
