Ajuste border radius a las tarjetas de productos

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <div class="container">
       <div class="row gy-4">
         <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
-          <div class="service-item position-relative">
+          <div class="service-item position-relative" style="border-radius: 15px; box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);">
             <div class="icon"><i class=""></i></div>
             <img
               src="https://images.pexels.com/photos/5626726/pexels-photo-5626726.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
@@ -149,7 +149,7 @@
         <!-- End Service Item -->
 
         <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
-          <div class="service-item position-relative">
+          <div class="service-item position-relative" style="border-radius: 15px; box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);">
             <div class="icon">
               <i class="bi bi-bounding-box-circles icon"></i>
             </div>
@@ -165,7 +165,7 @@
         <!-- End Service Item -->
 
         <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
-          <div class="service-item position-relative">
+          <div class="service-item position-relative" style="border-radius: 15px; box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);">
             <div class="icon"><i class="bi bi-calendar4-week icon"></i></div>
             <img
               src="https://images.pexels.com/photos/4523030/pexels-photo-4523030.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
@@ -180,7 +180,7 @@
         <!-- End Service Item -->
 
         <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
-          <div class="service-item position-relative">
+          <div class="service-item position-relative" style="border-radius: 15px; box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);">
             <div class="icon"><i class="bi bi-broadcast icon"></i></div>
             <img
               src="https://images.pexels.com/photos/8762881/pexels-photo-8762881.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
@@ -205,8 +205,8 @@
   <section class="acordeon_consolas">
     
 
-    <div class="accordion" id="accordionExample">
-      <div class="accordion-item">
+    <div class="accordion" id="accordionExample" >
+      <div class="accordion-item" >
         <h2 class="accordion-header">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
             A que no sabias de tu XBox
