se ajusta width 100% en accordion para evitar que el blog se retraiga a la derecha al no tener ninguna pestaña desplegada

--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
   <h2 >Nuestro blog</h2>
 </div>
 
-<!-- Inicio seccion consolas -->
+<!-- Inicio seccion blog consolas -->
 
   <section class="acordeon_consolas">
     
 
-    <div class="accordion" id="accordionExample" >
+    <div class="accordion  " id="accordionExample" >
       <div class="accordion-item" >
         <h2 class="accordion-header">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -287,7 +287,7 @@
   </section>
 
 
-<!-- Fin seccion consolas -->
+<!-- Fin blog seccion consolas -->
 
 
 
