Cambio imagen en el blog

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
     <div class="div_blog_consolas">
 
-      <img src="img/gaming_isometric.jpg" alt="" class="img_gaming">    
+      <img src="img/Blog.png" alt="" class="img_gaming">    
 
       <div class="btn_consolas">
         <a href="consolas.html">Compra aqui</a>
