--- a/inicioSesion/signup.html
+++ b/inicioSesion/signup.html
@@ -9,6 +9,7 @@
     <title>Registro</title>
 </head>
 <body>
+    <header></header>
     <section>
         <h2>Registro</h2>
         <form id="signupForm">
@@ -24,5 +25,6 @@
     </section>
     <script src="js/signup.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
