--- a/index.html
+++ b/index.html
@@ -41,53 +41,7 @@
 
 <body>
   <header>
-
-
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body">
-      <div class="container"> <a class="navbar-logo" ><img src="img/logo.png" ></a>
-        
-        <!-- <div class="container-fluid"> -->
-         <button
-           data-mdb-collapse-init
-           class="navbar-toggler"
-           type="button"
-           data-mdb-target="#navbarExample01"
-           aria-controls="navbarExample01"
-           aria-expanded="false"
-           aria-label="Toggle navigation"
-         >
-           <i class="fas fa-bars"></i>
-         </button>
-
-         <div class="collapse navbar-collapse" id="navbarExample01">
-           <ul class="navbar-nav ml-auto">
-             <li class="nav-item active">
-               <a class="nav-link" aria-current="page" href="index.html"
-                 >Inicio</a
-               >
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="./nosotros.html">Nosotros</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="./consolas.html">Consolas</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="./contacto.html">Contactanos</a>
-             </li>
-             <li>
-               <li class="nav-item">
-                 <a class="nav-link" href="./inicioSesion/login.html" target="_blank"><i class="fa-solid fa-user"></i>Iniciar Sesión/ Registrate</a>
-               </li>
-             </li>
-           </ul>
-         </div>
-       <!-- </div> -->
-      </div>
-    </nav>
-    <!-- Navbar -->
-
+  </header>
 
 
     <!-- Carrusel -->
@@ -140,7 +94,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-  </header>
+  
 
   <!-- Services Section -->
   <section id="services" class="services section light-background" style="margin: 100px">
@@ -259,31 +213,7 @@
 
   <!-- Footer -->
   <footer class="bg-body-tertiary text-center">
-    <!-- Grid container -->
-    <div class="container p-4 pb-0">
-      <!-- Section: Social media -->
-      <section class="mb-4">
-        <!-- Facebook -->
-        <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!"
-          role="button"><i class="fab fa-facebook-f"></i></a>
-
-        <!-- Twitter -->
-        <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#!"
-          role="button"><i class="fab fa-twitter"></i></a>
-
-        <!-- Instagram -->
-        <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#!"
-          role="button"><i class="fab fa-instagram"></i></a>
-      </section>
-      <!-- Section: Social media -->
-    </div>
-    <!-- Grid container -->
-
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05)">
-      © 2024 Copyright:
-      <a class="text-body" href="https://mdbootstrap.com/">Armor Games</a>
-    </div>
+   
     <!-- Copyright -->
   </footer>
 
@@ -292,6 +222,7 @@
       class="fa-solid fa-arrow-up-from-bracket"></i></a>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
