--- a/inicioSesion/index.html
+++ b/inicioSesion/index.html
@@ -9,11 +9,13 @@
     <title>Home</title>
 </head>
 <body>
+    <header></header>
     <section>
         <h1>Home</h1>
         <button id="logout">Logout</button>
     </section>
     <script src="js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
