--- a/inicioSesion/login.html
+++ b/inicioSesion/login.html
@@ -9,6 +9,7 @@
     <title>Login</title>
 </head>
 <body>
+    <header></header>
     <section>
         <h2>Login</h2>
         <form id="loginForm">
@@ -17,10 +18,12 @@
             <label>Contraseña</label>
             <input type="password" placeholder="..." id="password" required>
             <input type="submit" value="Ingresar">
+            
         </form>
         <p>No tienes una cuenta? <a href="signup.html">Registro</a></p>
     </section>
     <script src="js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
