--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 consolas
               </a>
               <ul class="dropdown-menu" style="font-size: 20px; ">
-                <li><a class="dropdown-item" href="consolas_xbox.html">Xbox</a></li>
+                <li><a class="dropdown-item" href="./compras/consolasxbox.html">Xbox</a></li>
                 <li><a class="dropdown-item" href="consolas_playStation.html">Play Station</a></li>
                 <li><a class="dropdown-item" href="consolas_nintendoSwitch.html">Nintendo Switch</a></li>
                 <li><a class="dropdown-item" href="consolas_retro.html">Consolas retro</a></li>
