Se cambia el enlace del menú a la pestaña PlayStation que esta en la carpeta compras

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </a>
               <ul class="dropdown-menu" style="font-size: 20px; ">
                 <li><a class="dropdown-item" href="./compras/consolasxbox.html">Xbox</a></li>
-                <li><a class="dropdown-item" href="consolas_playStation.html">Play Station</a></li>
+                <li><a class="dropdown-item" href="./compras/consolasplayStation.html">Play Station</a></li>
                 <li><a class="dropdown-item" href="consolas_nintendoSwitch.html">Nintendo Switch</a></li>
                 <li><a class="dropdown-item" href="consolas_retro.html">Consolas retro</a></li>
                 <li><hr class="dropdown-divider"></li>
