Se crea pagina de compras de consolas retro y consolas nitendoSwit con sus respectivos productos.

--- a/compras/consolasxbox.html
+++ b/compras/consolasxbox.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preload" href="../css/estilos.css">
     <link rel="icon" href="img/pexels-stasknop-1298601.jpg" type="image/png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="stilo.css">
@@ -70,6 +71,12 @@
     <section class="contenedor">
         <!-- Contenedor de elementos -->
         <div class="contenedor-items">
+          <div class="item">
+            <span class="titulo-item">XBOX X</span>
+            <img src="https://assets.xboxservices.com/assets/12/7e/127e5830-82cb-4f6c-beef-4f9a0c970430.jpg?n=Consoles-Hub_Content-Placement_Hub-SX_788x444.jpg" alt="" class="img-item">
+            <span class="precio-item">$3.000.000</span>
+            <button class="boton-item">Agregar al Carrito</button>
+        </div>
             <div class="item">
                 <span class="titulo-item">XBOX S</span>
                 <img src="https://assets.xboxservices.com/assets/fc/28/fc283911-f016-42d5-8e51-0dfca7ab5ce1.jpg?n=Shop-Consoles_Content-Placement_Hub_294958693_788x444.jpg" alt="" class="img-item">
