--- a/consolas_nintendoSwitch.html
+++ b/consolas_nintendoSwitch.html
@@ -117,7 +117,7 @@
               <h5 class="card-title">NINTENDO SWITCH | OLED</h5>
               <p class="card-text">Desde COP 3'000.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasnitendoSwitch.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -148,7 +148,7 @@
               <h5 class="card-title">NINTENDO SWITCH </h5>
               <p class="card-text">Desde COP 3'000.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasnitendoSwitch.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -178,7 +178,7 @@
               <h5 class="card-title">NINTENDO SWITCH LITE</h5>
               <p class="card-text">COP 2'500.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasnitendoSwitch.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
