--- a/consolas_playStation.html
+++ b/consolas_playStation.html
@@ -116,7 +116,7 @@
               <h5 class="card-title">PLAY STATION 5</h5>
               <p class="card-text">Desde COP 3'000.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasplayStation.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -146,7 +146,7 @@
               <h5 class="card-title">PLAY STATION 4</h5>
               <p class="card-text">Desde COP 3'000.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasplayStation.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -176,7 +176,7 @@
               <h5 class="card-title">PLAY STATION 3</h5>
               <p class="card-text">COP 2'500.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasplayStation.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -206,7 +206,7 @@
               <h5 class="card-title">PLAY STATION 2</h5>
               <p class="card-text">Desde COP 800.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasplayStation.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -237,7 +237,7 @@
               <h5 class="card-title">PLAY STATION 1</h5>
               <p class="card-text">Desde COP 600.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasplayStation.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
