--- a/consolas_retro.html
+++ b/consolas_retro.html
@@ -117,7 +117,7 @@
               <h5 class="card-title">GAMEBOY CLASSIC</h5>
               <p class="card-text">Desde COP 3'000.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasretro.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -147,7 +147,7 @@
               <h5 class="card-title">PS VITA</h5>
               <p class="card-text">Desde COP 3'000.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasretro.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -177,7 +177,7 @@
               <h5 class="card-title">NINTENDO CLASSIC FAMILY</h5>
               <p class="card-text">COP 2'500.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasretro.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -208,7 +208,7 @@
               <h5 class="card-title">SEGA</h5>
               <p class="card-text">Desde COP 800.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasretro.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -238,7 +238,7 @@
               <h5 class="card-title">NINTENDO 64</h5>
               <p class="card-text">Desde COP 800.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasretro.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -269,7 +269,7 @@
               <h5 class="card-title">SUPER NINTENDO</h5>
               <p class="card-text">Desde COP 600.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasretro.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
