--- a/consolas_xbox.html
+++ b/consolas_xbox.html
@@ -116,7 +116,7 @@
               <h5 class="card-title">XBOX X</h5>
               <p class="card-text">Desde COP 3'000.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasxbox.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -146,7 +146,7 @@
               <h5 class="card-title">XBOX S</h5>
               <p class="card-text">Desde COP 3'000.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasxbox.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -176,7 +176,7 @@
               <h5 class="card-title">XBOX ONE Series S | X</h5>
               <p class="card-text">COP 2'500.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasxbox.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -206,7 +206,7 @@
               <h5 class="card-title">XBOX 360 Series SLIM | E</h5>
               <p class="card-text">Desde COP 800.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasxbox.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -237,7 +237,7 @@
               <h5 class="card-title">XBOX CLASICA</h5>
               <p class="card-text">Desde COP 600.000</p>
               <a
-                href="./inicioSesion/index.html"
+                href="./compras/consolasxbox.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
