Se modifican enlace a las paginas de consolas desde los botones de la sección productos

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <img
               src="https://images.pexels.com/photos/5626726/pexels-photo-5626726.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
               class="img-fluid" />
-            <h4 class="titulo_h4"><a href="./consolas_xbox.html" class="stretched-link">XBOX S | X </a></h4>
+            <h4 class="titulo_h4"><a href="./compras/consolasxbox.html" class="stretched-link">XBOX S | X </a></h4>
             <p>
               Desde COP 3'000.000
             </p>
@@ -156,7 +156,7 @@
             <img
               src="https://images.pexels.com/photos/21067/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
               class="img-fluid" />
-            <h4 class="titulo_h4"><a href="./consolas_playStation.html" class="stretched-link">PLAY STATION 5</a></h4>
+            <h4 class="titulo_h4"><a href="./compras/consolasplayStation.html" class="stretched-link">PLAY STATION 5</a></h4>
             <p>
               Desde COP 2'500.000
             </p>
@@ -170,7 +170,7 @@
             <img
               src="https://images.pexels.com/photos/4523030/pexels-photo-4523030.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
               class="img-fluid" />
-            <h4 class="titulo_h4"><a href="./consolas_nintendoSwitch.html" class="stretched-link">NINTENDO SWITCH</a>
+            <h4 class="titulo_h4"><a href="./compras/consolasnitendoSwitch.html" class="stretched-link">NINTENDO SWITCH</a>
             </h4>
             <p>
               Desde COP 1'200.000
@@ -185,7 +185,7 @@
             <img
               src="https://images.pexels.com/photos/8762881/pexels-photo-8762881.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
               class="img-fluid" />
-            <h4 class="titulo_h4"><a href="./consolas_retro.html" class="stretched-link">CONSOLAS RETRO</a></h4>
+            <h4 class="titulo_h4"><a href="./compras/consolasretro.html" class="stretched-link">CONSOLAS RETRO</a></h4>
             <p>
               Desde COP 400.000
             </p>
